[workspace]
members = ["macros"]

[package]
name = "strawberry_fields"
version = "0.1.0"
edition = "2021"
description = "Consume, read, and mutate struct fields with an iterator-like api."
license = "MIT"
repository = "https://github.com/Jeremiah-Griffin/strawberry_fields"
categories = ["data-structures"]
keywords = ["fields", "iteration"]

[dependencies]
strawberry_fields_macros = {path = "macros", version = "0.1.0"}

[dev-dependencies]
trybuild = "1.0.96"


